@startuml

title __APP's Class Diagram__\n

  package org.team7.wtp {
    class BuildConfig {
    }
  }
  

  package org.team7.wtp {
    class ExampleInstrumentedTest {
    }
  }
  

  package org.team7.wtp {
    class GameModeSelectFragment {
    }
  }
  

  package org.team7.wtp {
    class IgnoredPreference {
    }
  }
  

  package org.team7.wtp {
    class MainActivity {
    }
  }
  

  package org.team7.wtp {
    class MainActivityFragment {
    }
  }
  

  package org.team7.wtp {
    class ObscuringImageView {
    }
  }
  

  package org.team7.wtp {
    class ObscuringView {
    }
  }
  

  package org.team7.wtp {
    class SettingsActivity {
    }
  }
  

  package org.team7.wtp {
    class SettingsActivityFragment {
    }
  }
  

  GameModeSelectFragment -up-|> DialogFragment
  IgnoredPreference -up-|> ListPreference
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- MainActivityFragment : pkmnFragment
  MainActivityFragment -up-|> Fragment
  MainActivityFragment o-- GameMode : mode
  MainActivityFragment o-- ObscuringImageView : obsImageView
  MainActivityFragment o-- ObscuringView : obsView
  ObscuringImageView -up-|> AppCompatImageView
  ObscuringView -up-|> View
  SettingsActivity -up-|> AppCompatActivity
  SettingsActivityFragment -up-|> PreferenceFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
